src/test/ui/lifetimes/issue-103762-2.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-103762-2.rs:7:34
   |
LL | fn a1(_: Box<dyn Trait + '_>) -> &str { loop {} }
   |                                  ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime
   |
LL | fn a1(_: Box<dyn Trait + '_>) -> &'static str { loop {} }
   |                                   +++++++

error[E0106]: missing lifetime specifier
  --> $DIR/issue-103762-2.rs:8:30
   |
LL | fn a2(_: Box<Trait + '_>) -> &str { loop {} }
   |                              ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime
   |
LL | fn a2(_: Box<Trait + '_>) -> &'static str { loop {} }
   |                               +++++++

error[E0637]: `'_` cannot be used here
  --> $DIR/issue-103762-2.rs:19:18
   |
LL | fn c1<T: Trait + '_>(_: &T) -> &str { loop {} }
   |                  ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/issue-103762-2.rs:20:42
   |
LL | fn c2<T>(_: &T) -> &str where T: Trait + '_ { loop {} }
   |                                          ^^ `'_` is a reserved lifetime name

error[E0106]: missing lifetime specifier
  --> $DIR/issue-103762-2.rs:29:8
   |
LL |     -> &str { loop {} }
   |        ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime
   |
LL |     -> &'static str { loop {} }
   |         +++++++

error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/issue-103762-2.rs:7:14
   |
LL | fn a1(_: Box<dyn Trait + '_>) -> &str { loop {} }
   |              ^^^^^^^^^^^^^^

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-103762-2.rs:8:14
   |
LL | fn a2(_: Box<Trait + '_>) -> &str { loop {} }
   |              ^^^^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
   = note: `#[warn(bare_trait_objects)]` on by default
help: use `dyn`
   |
LL | fn a2(_: Box<dyn Trait + '_>) -> &str { loop {} }
   |              +++

error[E0228]: the lifetime bound for this object type cannot be deduced from context; please supply an explicit bound
  --> $DIR/issue-103762-2.rs:8:14
   |
LL | fn a2(_: Box<Trait + '_>) -> &str { loop {} }
   |              ^^^^^^^^^^

warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-103762-2.rs:14:15
   |
LL | fn b2(_: fn(&(Trait + '_)) -> &str) { loop {} }
   |               ^^^^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2021!
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/warnings-promoted-to-error.html>
help: use `dyn`
   |
LL | fn b2(_: fn(&(dyn Trait + '_)) -> &str) { loop {} }
   |               +++

error[E0658]: anonymous lifetimes in `impl Trait` are unstable
  --> $DIR/issue-103762-2.rs:28:23
   |
LL | fn d1(_: impl Trait + '_)
   |                       ^^ expected named lifetime parameter
   |
   = help: add `#![feature(anonymous_lifetime_in_impl_trait)]` to the crate attributes to enable
help: consider introducing a named lifetime parameter
   |
LL | fn d1<'a>(_: impl Trait + '_'a )
   |      ++++                   ++

error[E0658]: anonymous lifetimes in `impl Trait` are unstable
  --> $DIR/issue-103762-2.rs:37:25
   |
LL | fn d2(_: &(impl Trait + '_))
   |                         ^^ expected named lifetime parameter
   |
   = help: add `#![feature(anonymous_lifetime_in_impl_trait)]` to the crate attributes to enable
help: consider introducing a named lifetime parameter
   |
LL | fn d2<'a>(_: &(impl Trait + '_'a ))
   |      ++++                     ++

error[E0658]: anonymous lifetimes in `impl Trait` are unstable
  --> $DIR/issue-103762-2.rs:39:32
   |
LL | fn d3(_: &i32, _: impl Trait + '_)
   |                                ^^ expected named lifetime parameter
   |
   = help: add `#![feature(anonymous_lifetime_in_impl_trait)]` to the crate attributes to enable
help: consider introducing a named lifetime parameter
   |
LL | fn d3<'a>(_: &i32, _: impl Trait + '_'a )
   |      ++++                            ++

error[E0658]: anonymous lifetimes in `impl Trait` are unstable
  --> $DIR/issue-103762-2.rs:41:23
   |
LL | fn d4(_: impl Trait + '_, _: &i32)
   |                       ^^ expected named lifetime parameter
   |
   = help: add `#![feature(anonymous_lifetime_in_impl_trait)]` to the crate attributes to enable
help: consider introducing a named lifetime parameter
   |
LL | fn d4<'a>(_: impl Trait + '_'a , _: &i32)
   |      ++++                   ++

error: aborting due to 11 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0106, E0228, E0637, E0658.
For more information about an error, try `rustc --explain E0106`.
